--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 PORT = 9000
 MONGO_URI = mongodb+srv://compreg:compreg123j@cluster0.fmt5e.mongodb.net/okr?retryWrites=true&w=majority
 SECRET_KEY= topsecretoftheindia
+HOST_USERNAME= apikey
+HOST_PASSWORD= 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
+HOST = smtp.sendgrid.net
+HOST_EMAIL=rejith.r@deepnetsoft.com
+BACKEND_URL = localhost:3000
