--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT = 9000
 MONGO_URI = mongodb+srv://compreg:compreg123j@cluster0.fmt5e.mongodb.net/okr?retryWrites=true&w=majority
 SECRET_KEY= topsecretoftheindia
 HOST_USERNAME= apikey
-HOST_PASSWORD= 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
+HOST_PASSWORD= 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
 HOST = smtp.sendgrid.net
 HOST_EMAIL=rejith.r@deepnetsoft.com
 BACKEND_URL = localhost:3000
